MDEV-19541 InnoDB crashes when trying to recover a corrupted page

- Don't apply redo log for the corrupted page when innodb_force_recovery > 0.
- Allow the table to be dropped when index root page is
corrupted when innodb_force_recovery > 0.